# optool

./: .gitignore  CONTENT  INSTALL  LICENSE  MANIFEST.in  Makefile  OldMakefile  README.org  UserGuide.org  call.f90  codemeta.jason  dmilay_f95.f  meanopacity.f90  notes.org  optool-complete  optool-guts.f90  optool.bib  optool.f90  optool.org  optool.py  optool2paper  optool2tex  optool_extra.f  optool_fractal.f90  optool_geofractal.f90  optool_guts.f90  optool_guts2.f  optool_manual.f90  optool_mmf.f90  optool_plot.py  optool_refind.f90  pyproject.toml  ref_ind.f90  ref_ind.template  setup.py  widget.py
code4reading/: README  readfits.f90
lnk_data/: astrosil-Draine2003.lnk  c-gra-Draine2003.lnk  c-gra-XXX1900.lnk  c-nano-Mutschke2004.lnk  c-org-Henning1900.lnk  c-org-Henning1996.lnk  c-p-Preibisch1993.lnk  c-z-Zubko1996.lnk  ch3oh-a-Gerakines2020.lnk  ch3oh-c-Gerakines2020.lnk  ch4-a-Gerakines2020.lnk  ch4-c-Gerakines2020.lnk  co-a-Palumbo2006.lnk  co2-a-Gerakines2020.lnk  co2-c-Gerakines2020.lnk  co2-w-Warren1986.lnk  cor-c-Koike1995.lnk  fe-c-Henning1996.lnk  fes-Henning1996.lnk  h2o-a-Hudgins1993.lnk  h2o-w-Warren2008.lnk  icemix-c2d-Pontoppidan2009.lnk  lnk-help.txt  nh3-m-Martonchik1983.lnk  ol-c-mg00-Fabian2001.lnk  ol-c-mg100-Steyer1974.lnk  ol-c-mg100-Suto2006.lnk  ol-c-mg95-Fabian2001.lnk  ol-mg40-Dorschner1995.lnk  ol-mg50-Dorschner1995.lnk  old-lnk-help.txt  pyr-c-mg96-Jaeger1998.lnk  pyr-mg100-Dorschner1995.lnk  pyr-mg40-Dorschner1995.lnk  pyr-mg50-Dorschner1995.lnk  pyr-mg60-Dorschner1995.lnk  pyr-mg70-Dorschner1995.lnk  pyr-mg80-Dorschner1995.lnk  pyr-mg95-Dorschner1995.lnk  sic-Draine1993.lnk  (+1 more)
lnk_data/ad/: README.org  (+5 more)
maint/: RELEASE  bake_manual.pl  hash.pl  ingestlnk.pl  notes.org  optool_complete.pl  optool_getopt  pds70_interactive.ipynb  plotall.py  ref_ind.template  rename.pl  run_examples  selftest.pl  test-nonabs-cde.py  testsizedist.py  tt_repeat
misc/: allcmd  bake_manual.pl  ingestlnk.pl  mean.f90  notes.org  nselftest.pl  plot_lnk.py  ref_ind.template  run_examples  selftest.pl  snippets.f90  tt_multi
readoutput/: Makefile  readascii.f90
(+70 files in other folders)
