[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Optool"
version = "2028.10.03"
# dynamic = ["version"]
dependencies = [
  "numpy",
  "matplotlib",
]
requires-python = ">= 3.7"
authors = [
  {name = "Carsten Dominik", email = "c.dominik@uva.nl"},
]
description = "Optool"
readme = {file = "README.org", content-type = "text/plain"}
license = {file = "LICENSE"}
keywords = ["astrophysics"]

[project.urls]
Repository = "https://github.com/cdominik/optool"

[tool.hatch.build.targets.sdist]
include = [
  "src/optool",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optool"]
