[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Optool"
version = "2028.10.03"
# dynamic = ["version"]
dependencies = [
  "numpy",
  "matplotlib",
]
requires-python = ">= 3.7"
authors = [
  {name = "Carsten Dominik", email = "c.dominik@uva.nl"},
]
description = "Optool"
readme = {file = "README.org", content-type = "text/plain"}
license = {file = "LICENSE"}
keywords = ["astrophysics"]

[project.urls]
Repository = "https://github.com/cdominik/optool"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/env",
]

[tool.hatch.build.targets.wheel]
packages = ["src/optool"]
